impl panicking clone

--- a/bin/host/Cargo.toml
+++ b/bin/host/Cargo.toml
@@ -16,7 +16,7 @@ workspace = true
 kona-mpt.workspace = true
 kona-client.workspace = true
 kona-derive.workspace = true
-kona-common.workspace = true
+kona-common = { workspace = true, features = ["std"] }
 kona-preimage.workspace = true
 kona-derive-alloy.workspace = true
 
